; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_e100_disable_txdma_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_e100_disable_txdma_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e100_serial = type { i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"IRQ disable_txdma_irq %i\0A\00", align 1
@R_IRQ_MASK2_CLR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.e100_serial*)* @e100_disable_txdma_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e100_disable_txdma_irq(%struct.e100_serial* %0) #0 {
  %2 = alloca %struct.e100_serial*, align 8
  store %struct.e100_serial* %0, %struct.e100_serial** %2, align 8
  %3 = load %struct.e100_serial*, %struct.e100_serial** %2, align 8
  %4 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.e100_serial*, %struct.e100_serial** %2, align 8
  %7 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @DEBUG_LOG(i32 %5, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @DINTR1(i32 %9)
  %11 = load %struct.e100_serial*, %struct.e100_serial** %2, align 8
  %12 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** @R_IRQ_MASK2_CLR, align 8
  store i32 %13, i32* %14, align 4
  ret void
}

declare dso_local i32 @DINTR1(i32) #1

declare dso_local i32 @DEBUG_LOG(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
